--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,6 @@
+span {
+  font-size: 9pt; }
+
 .top-menu {
   background-color: rgba(0, 0, 0, 0.85); }
   .top-menu a {
@@ -10,3 +13,28 @@
 
 .card-title {
   font-weight: bold; }
+
+.card-post {
+  width: 100%;
+  max-height: 220px;
+  margin-bottom: 20px;
+  padding: 20px;
+  text-align: left;
+  /*border-left: 0px solid;
+    border-top: 0px solid;
+    border-right: 0px solid;*/ }
+
+.titulo h2 {
+  font-weight: bold; }
+
+.pag-texto {
+  display: block;
+  margin-top: 80px; }
+  .pag-texto .card {
+    border: 0px solid; }
+  .pag-texto .card-title, .pag-texto .card-subtitle {
+    text-align: center; }
+  .pag-texto .card-text {
+    margin-top: 80px;
+    text-align: justify;
+    line-height: 2; }
