--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,11 @@
+a {
+  text-decoration: none;
+  color: black; }
+
+a:hover {
+  text-decoration: none;
+  color: black; }
+
 span {
   font-size: 9pt; }
 
@@ -36,5 +44,7 @@ span {
     text-align: center; }
   .pag-texto .card-text {
     margin-top: 80px;
-    text-align: justify;
+    text-align: justify !important;
     line-height: 2; }
+  .pag-texto .autor {
+    font-weight: bold; }
