--- a/Application/assets/scss/style.scss
+++ b/Application/assets/scss/style.scss
@@ -16,6 +16,7 @@ a:hover{
 span{
     font-size: 9pt;
 }
+
 .top-menu{
     background-color:  $cor-menu;
     a{
@@ -24,6 +25,8 @@ span{
     a:hover{
         color: #FFFF;
     }
+   
+   
 }
 
 .rodape{
@@ -36,13 +39,19 @@ span{
 
 .card-post{
     width: 100%;
-    max-height: 220px;
+    max-height: 250px;
     margin-bottom: 20px;
     padding: 20px;
     text-align: left;
     /*border-left: 0px solid;
     border-top: 0px solid;
     border-right: 0px solid;*/
+    .link-autor{
+        font-weight: bold;
+    }
+    .card-title{
+        margin-top: 20px;
+    }
 }
 
 .titulo{
@@ -69,4 +78,24 @@ span{
     .autor{
         font-weight: bold;
     }
+}
+
+.container-login{
+    padding: 40px;
+    box-shadow: -5px 9px 17px -10px rgba(0,0,0,0.75);
+    .form-login{
+        margin-top: 40px;
+        input:active{
+            border-color: red;
+        }
+    }
+    .btn{
+        width: 100%;
+    }
+    .btn-cadastrar{
+        margin-top: 10px;
+        background-color: #F5F5F5;
+        color: #999;
+    }
+    
 }
