Correção do menu

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,9 +12,18 @@ span {
 .top-menu {
   background-color: rgba(0, 0, 0, 0.85); }
   .top-menu a {
-    color: #999; }
+    color: #999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
   .top-menu a:hover {
     color: #FFFF; }
+  .top-menu .link-fto {
+    float: right;
+    margin-right: 30px;
+    border: 1px solid red; }
+    .top-menu .link-fto .fto-menu {
+      width: 50px; }
 
 .rodape {
   background-color: #F8F9FA; }
