--- a/Application/assets/scss/style.scss
+++ b/Application/assets/scss/style.scss
@@ -19,14 +19,24 @@ span{
 
 .top-menu{
     background-color:  $cor-menu;
+    
     a{
         color: #999;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
     }
     a:hover{
         color: #FFFF;
     }
-   
-   
+    .link-fto{
+        float: right;
+        margin-right: 30px;
+        border: 1px solid red;
+        .fto-menu{
+            width: 50px;
+        } 
+    }
 }
 
 .rodape{
